# miniscience

laba1/: CMakeLists.txt  laba1.1.cpp  laba2.1.cpp
laba2/: CMakeLists.txt  ROCKET4.stl  laba2.cpp  r1.webm  rocket1.ogv
laba3/: CMakeLists.txt  dolfin.conf  poisson.cpp
